[metadata]
name = performance_docs
summary = OpenStack performance testing plans, results and investigations 
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/performance-docs/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License

[files]
packages =
    performance_docs

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

